<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChromeCast Blackjack</string>
    <string name="app_id">8551B7D2</string>
    <string name="namespace">urn:x-cast:com.twoscoopgames.blackjack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_betting">Place Your Bet</string>
    <string name="start_chromecast">Start ChromeCast</string>
    <string name="wallet">Wallet:</string>
    <string name="initial_wallet_amount">$1000</string>
    <string name="current_bet">Current Bet:</string>
    <string name="initial_bet_amount">$0</string>
    <string name="bet1">Bet $1</string>
    <string name="bet5">Bet $5</string>
    <string name="bet25">Bet $25</string>
    <string name="bet100">Bet $100</string>
    <string name="clear_bet">Clear Bet</string>
    <string name="submit_bet">Submit Bet</string>
    <string name="media_route_menu_title">Media Route Menu Title</string>

</resources>
